JDK,스프링부트 버전업 및 마이너 버그 수정